base on tima's branch, added obj loading function, a bug fixed.

--- a/WallsAndHoles/shaders.qrc
+++ b/WallsAndHoles/shaders.qrc
@@ -3,4 +3,7 @@
         <file>basic.vsh</file>
         <file>basic.fsh</file>
     </qresource>
+    <qresource prefix="/assets">
+        <file>cube.obj</file>
+    </qresource>
 </RCC>
