DrawableGLObject and axes
Added the DrawableGLObject. This is any object that needs special
rendering. They can be added to a Scene just like RenderableObjects.

Note for future: I have noticed occasional crashes happening right when
the Show View button is pressed in the UI. These happen infrequently
and without a pattern.

--- a/WallsAndHoles/shaders.qrc
+++ b/WallsAndHoles/shaders.qrc
@@ -2,6 +2,8 @@
     <qresource prefix="/shaders">
         <file>basic.vsh</file>
         <file>basic.fsh</file>
+        <file>colors.vsh</file>
+        <file>colors.fsh</file>
     </qresource>
     <qresource prefix="/assets">
         <file>cube.obj</file>
