--- a/WallsAndHoles/mainwindow.ui
+++ b/WallsAndHoles/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>300</y>
+      <x>190</x>
+      <y>190</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -34,28 +34,24 @@
      <x>0</x>
      <y>0</y>
      <width>493</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+   </widget>
+   <addaction name="menuFile"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionNew_map">
+   <property name="text">
+    <string>New map</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>MapView</class>
-   <extends>QGraphicsView</extends>
-   <header>mapview.h</header>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
