Added TileMap properties

--- a/WallsAndHoles/newmapdialog.ui
+++ b/WallsAndHoles/newmapdialog.ui
@@ -101,6 +101,39 @@
     <number>1</number>
    </property>
   </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>70</y>
+     <width>112</width>
+     <height>65</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QRadioButton" name="noPropertyRadioBtn">
+      <property name="text">
+       <string>No Map Prooperty</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="outdoorRadioBtn">
+      <property name="text">
+       <string>Outdoor Map</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="indoorRadioBtn">
+      <property name="text">
+       <string>Indoor Map</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <resources/>
  <connections>
