--- a/WallsAndHoles/newmapdialog.ui
+++ b/WallsAndHoles/newmapdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>395</width>
-    <height>178</height>
+    <height>184</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -82,8 +82,11 @@
          <property name="text">
           <string>Default</string>
          </property>
-         <property name="checked">
+         <property name="checkable">
           <bool>true</bool>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
