--- a/WallsAndHoles/meshviewcontainer.ui
+++ b/WallsAndHoles/meshviewcontainer.ui
@@ -10,6 +10,12 @@
     <height>480</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>500</width>
+    <height>320</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
