--- a/WallsAndHoles/textures.qrc
+++ b/WallsAndHoles/textures.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/textures">
         <file>exampleTexture.png</file>
+        <file>exampleTexture2.png</file>
     </qresource>
 </RCC>
