Made thickness editable
Modified some texture-coordinate generation in the TileMesher.

Added new default ground texture.

--- a/WallsAndHoles/textures.qrc
+++ b/WallsAndHoles/textures.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/textures">
         <file>exampleTexture.png</file>
         <file>exampleTexture2.png</file>
+        <file>grassTexture.jpg</file>
     </qresource>
 </RCC>
